--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello mustapha this is my frist page</h1>
+    <h1>hello mustapha boudchich i am student ok </h1>
     
     <script src="app.js"></script>
 </body>
