--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>hello mustapha boudchich i am student ok </h1>
+    <h2>good mooring world</h2>
     
     <script src="app.js"></script>
 </body>
